리더보드 CR API 추가
